--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /ShoppingCart_EAD/nbproject/private/
 /ShoppingCart_EAD/ShoppingCart_EAD-war/nbproject/private/
 /ShoppingCart_EAD/ShoppingCart_EAD-ejb/nbproject/private/
+/ShoppingCart_EAD/ShoppingCart_EAD-ejb/build/
+/ShoppingCart_EAD/ShoppingCart_EAD-ejb/dist/
+/ShoppingCart_EAD/ShoppingCart_EAD-war/build/
+/ShoppingCart_EAD/build/
+/ShoppingCart_EAD/ShoppingCart_EAD-war/dist/
+/ShoppingCart_EAD/dist/
